syntax = "proto3";

import "google/protobuf/empty.proto";

package bot;

option go_package = "rolando/server/bot";

service Bot {
  rpc GetBotUser(google.protobuf.Empty) returns (BotUser) {}
  rpc GetBotGuilds(google.protobuf.Empty) returns (stream BotGuild) {}
  rpc BroadcastMessage(BroadcastMessageRequest) returns (google.protobuf.Empty) {}
}

message BotUser {
  string id = 1;
  string username = 2;
  string globalName = 3;
  string avatarUrl = 4;
  string discriminator = 5;
  bool verified = 6;
  int32 accentColor = 7;
  string inviteUrl = 8;
  repeated SlashCommand slashCommands = 9;
}

message BotGuild {
  string id = 1;
  string name = 2;
  repeated BotGuildChannel channels = 3;
}

message BotGuildChannel {
  string id = 1;
  string name = 2;
  bool text = 3;
}

message BotGuildsList {
  repeated BotGuild guilds = 1;
}

message SlashCommand {
  string name = 1;
  string description = 2;
}

message BroadcastMessageRequest {
  string content = 1;
  // list of guild ids
  repeated BroadcastGuildRequest guilds = 2;
}

message BroadcastGuildRequest {
  string id = 1;
  oneof optional {
    string channelId = 2;
  }
}